🐛 fix: align "feedback" layout

--- a/src/sass/components/_feedback.scss
+++ b/src/sass/components/_feedback.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
   gap: 1rem;
   padding: 2rem;
   margin: 0 auto;
